@startuml DiagramModel

class DiagramElement {
  -elements: Map<String, DiagramElement>
  -elementCoordinates : Map<String, Point>
  -displayName : String
  -description : String
  -name : String
}

class Relationship {
  -id : String
  -description : String
}

class DiagramModel {
  -elements : Map<String, Element>
  -relationships : Map<String, Relationship>
  -navigationStack : List<String>
  -softwareSystemCount : Number
  -personCount : Number
  -containerCount : Number

  +addElement(element : DiagramElement) : DiagramElement
  +addRelationshipBetween(sourceId : String, targetId : String) : Map
  +renameElement(oldName : String, newName : String) : Boolean
  +setElementCoordinates(id : String, coords : Point) : void
  +pushToStack(id : String) : void
  +popFromStack() : String
  +isStackEmpty() : Boolean
}

DiagramModel "1" *-- "1" DiagramElement: rootElement
DiagramModel *-- DiagramElement: currentElement
DiagramElement *-- DiagramElement: elements
DiagramModel *-- Relationship: relationships
DiagramModel "1" *-- "*" DiagramElement : elements
DiagramElement "1" *-- "*" Relationship : relationships
Relationship "1" --> "1" DiagramElement : source
Relationship "1" --> "1" DiagramElement : target

@enduml
